Caso_3/db_statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysqldb
spec:
  selector:
    matchLabels:
      app: mysqldb
  serviceName: "mysqldb"
  replicas: 1
  template:
    metadata:
      labels:
        app: mysqldb
    spec:
      containers:
        - name: mysqldb
          image: mysql:8.4.2
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
              name: mysqldb
          volumeMounts:
            - mountPath: "/docker-entrypoint-initdb.d/"
              name: sql-dump-volume     
      volumes:
        - name: secret-volume
          secret:
            secretName: mysql-secret
        - name: sql-dump-volume
          persistentVolumeClaim:
            claimName: sql-dump-pvc
  volumeClaimTemplates:
    - metadata:
        name: mysqldb-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
