Caso_3/db_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  labels:
    app: mysqldb
spec:
  ports:
    - port: 3306
      name: mysqldb
  selector:
    app: mysqldb
