Caso_3/mb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000 
  selector:
    app: metabase
